# sfu

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  dev.toml  install.sh
.github/workflows/: ci.yml
examples/: client.html
src/: auth.rs  config.rs  control.rs  engine.rs  main.rs
www/: README.md  package-lock.json  package.json  soli.toml
www/app/controllers/: docs_controller.sl  home_controller.sl
www/app/helpers/: application_helper.sl
www/app/views/docs/: _nav.html.slv  api.html.slv  architecture.html.slv  bonfire.html.slv  client.html.slv  install.html.slv  ops.html.slv  overview.html.slv  tokens.html.slv
www/app/views/layouts/: application.html.slv
www/config/: routes.sl
www/public/css/: application.css  docs.css
www/public/js/: docs.js
